--- a/server/package.json
+++ b/server/package.json
@@ -8,9 +8,10 @@
     "accepts": "^1.3.8",
     "apollo-datasource": "^3.3.2",
     "apollo-reporting-protobuf": "^3.3.2",
-    "apollo-server": "^2.26.0",
+    "apollo-server-core": "^3.10.2",
     "apollo-server-env": "^4.2.1",
     "apollo-server-errors": "^3.3.1",
+    "apollo-server-express": "^3.10.2",
     "apollo-server-plugin-base": "^3.6.2",
     "array-flatten": "^1.1.1",
     "async-retry": "^1.3.3",
@@ -39,7 +40,7 @@
     "fresh": "^0.5.2",
     "function-bind": "^1.1.1",
     "get-intrinsic": "^1.1.2",
-    "graphql": "^14.7.0",
+    "graphql": "^16.6.0",
     "graphql-tag": "^2.12.6",
     "has": "^1.0.3",
     "has-symbols": "^1.0.3",
