--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,18 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.6.9",
+    "@prisma/client": "^4.3.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "apollo-link-ws": "^1.0.20",
+    "apollo-server-core": "^3.10.2",
+    "apollo-server-express": "^3.10.2",
+    "bcryptjs": "^2.4.3",
+    "express": "^4.18.1",
     "graphql": "^16.6.0",
+    "jsonwebtoken": "^8.5.1",
+    "prisma": "^4.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
@@ -16,7 +23,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "prepare": "npx prisma generate --schema=./server/prisma/schema.prisma",
+    "start": "node server/src/index.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
